--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Vows Slideshow, WOW Slider, html5 slideshow, html5 slider" />
+	<meta name="keywords" content="Vows Slideshow, WOW Slider, javascript slideshow, slideshow html" />
 	<meta name="description" content="Vows Slideshow created with WOW Slider, a free wizard program that helps you easily generate beautiful web slideshow" />
 	<!-- Start WOWSlider.com HEAD section -->
 	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
 	<script type="text/javascript" src="engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
     </head>
-    <body style="background-color:#f0f0f0">
+    <body style="background-color:#d7d7d7">
 	<!-- Start WOWSlider.com BODY section -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
@@ -31,22 +31,12 @@ and open the template in the editor.
 <li><a href="https://scontent-a-ord.xx.fbcdn.net/hphotos-ash3/t1.0-9/10299071_10102982895774858_4027031407493372124_n.jpg"><img src="data1/images/pic_8.jpg" alt="" title="" id="wows1_7"/></a>Some wonderful ladies</li>
 <li><a href="https://scontent-b-ord.xx.fbcdn.net/hphotos-prn2/t1.0-9/10299076_10102982719019078_3757521907179209651_n.jpg"><img src="data1/images/pic_9.jpg" alt="" title="" id="wows1_8"/></a>Here's to ~74 more years</li>
 </ul></div>
-<div class="ws_bullets"><div>
-<a href="#wows1_0" title="">1</a>
-<a href="#wows1_1" title="">2</a>
-<a href="#wows1_2" title="">3</a>
-<a href="#wows1_3" title="">4</a>
-<a href="#wows1_4" title="">5</a>
-<a href="#wows1_5" title="">6</a>
-<a href="#wows1_6" title="">7</a>
-<a href="#wows1_7" title="">8</a>
-<a href="#wows1_8" title="">9</a>
-</div></div>
-<span class="wsl"><a href="http://wowslider.com">jquery sliders</a> by WOWSlider.com v5.4m</span>
+<span class="wsl"><a href="http://wowslider.com">image slider jquery</a> by WOWSlider.com v5.4m</span>
 	<div class="ws_shadow"></div>
 	</div>
 	<script type="text/javascript" src="engine1/wowslider.js"></script>
 	<script type="text/javascript" src="engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 </body>
+
 </html>
